Rename Relation as StopsRelation - Relation already used by ActiveRecord

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -662,7 +662,7 @@ en:
           must_be_greater_than_minimal_time: must be greater than minimal time
         router:
           unauthorized: unauthorized in this profile
-        relation:
+        stops_relation:
           pickup_delivery_uniqueness: A visit can only belong to a single pickup/delivery relationship
   errors:
     database:
