Deliver - allow to clear from plan

--- a/config/locales/en.devices.yml
+++ b/config/locales/en.devices.yml
@@ -315,6 +315,10 @@ en:
         action: Send to driver
         success: Sent to driver successfully
         fail: Failed to send
+      deliver_clear:
+        action: Reset status
+        success: Status have been successfully reset
+        fail: Reset failed
       praxedo_send:
         action: Send to Praxedo
         success: Sent to Praxedo successfully
